// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover DOM testing Container with popover button containing children should match snapshot 1`] = `
<div>
  <span
    popoverbutton="true"
  >
    <i />
    
    <span>
      Some other element
    </span>
  </span>
  
  <div
    dummy-param="dummy data"
  />
</div>
`;

exports[`Popover DOM testing Container with popover button containing no children should open and close when clicking the button 1`] = `"<button popoverbutton=\\"true\\"></button><div class=\\"fade popover right in\\"><div class=\\"arrow\\"></div><div class=\\"popover-content\\">bar</div></div>"`;

exports[`Popover DOM testing Container with popover button containing no children should open and close when clicking the button 2`] = `"<button popoverbutton=\\"true\\"></button>"`;

exports[`Popover DOM testing Container with popover button containing no children should render correctly 1`] = `
<div>
  <button
    popoverbutton="true"
  />
  
</div>
`;

exports[`Popover DOM testing should not render if not visible 1`] = `
<div>
  
</div>
`;

exports[`Popover DOM testing should render correctly with a title 1`] = `
<div>
  <div
    class="fade popover bottom in"
  >
    <div
      class="arrow"
    />
    <h3
      class="popover-title"
    >
      Hi
    </h3>
    <div
      class="popover-content"
    >
      Foo
    </div>
  </div>
</div>
`;

exports[`Popover DOM testing should render correctly without a title 1`] = `
<div>
  <div
    class="fade popover bottom in"
  >
    <div
      class="arrow"
    />
    <div
      class="popover-content"
    >
      Foo
    </div>
  </div>
</div>
`;

exports[`Popover DOM testing should render sub-props correctly 1`] = `
<div>
  <div
    class="fade popover right in"
  >
    <div
      class="arrow"
    />
    <h3
      class="popover-title"
    >
      Hi
    </h3>
    <div
      class="popover-content"
    >
      This is some content
    </div>
  </div>
</div>
`;
